# LANoire

./: .gitignore  EDA.ipynb  README.md  create_audio_features.py  create_bounding_boxes.py  create_text_features.py  create_video_features.py  dataset.py  js_clap.sh  js_trans.sh  pyproject.toml  qwen.py  train_all.py  train_clap_ee.py  train_multimodal.py  train_text_model.py  train_trans_ee.py  train_unimodal.py  train_video_ee.py  train_video_model.py  utils.py
LANoire/: audio_encoder.py  dataset.py  feature_fusion.py  gmu.py  multimodal_model.py  text_encoder.py  unimodal_model.py  utils.py  video_encoder.py
tests/: test_audio_encoder.py  test_dataset.py  test_feature_fusion.py  test_gmu.py  test_multimodal_model.py
