[project]
name = "lanoire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "lightning>=2.5.1",
    "llvmlite==0.44.0",
    "numba==0.61.0",
    "numpy==2.1.0",
    "pytest>=8.3.5",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]
