[project]
name = "lanoire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "librosa>=0.11.0",
    "lightning>=2.5.1",
    "llvmlite==0.44.0",
    "mediapipe>=0.10.14",
    "notebook>=7.3.3",
    "numba==0.61.0",
    "numpy==2.1.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.3",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "wandb>=0.19.9",
]
